去除个人敏感信息

--- a/notify-service/src/main/resources/application.yml
+++ b/notify-service/src/main/resources/application.yml
@@ -4,9 +4,9 @@
 spring:
   # 邮件服务配置
   mail:
-    host: smtp.163.com  # 邮件服务器
-    username: liaolong_test@163.com #（邮箱账号
-    password: FIGNJKMTHWMNAACO # (开通SMTP/POP、SMTP/IMAP协议时的授权密码）
+    host: xxx  # 邮件服务器, 比如smtp.163.com
+    username: xxx@xxx.com #（邮箱账号
+    password: xxx # (开通SMTP/POP、SMTP/IMAP协议时的授权密码）
     # org.springframework.boot.autoconfigure.mail.MailProperties 中的有关Session配置属性
     # 文档查询
       # IMAP协议配置 https://javaee.github.io/javamail/docs/api/com/sun/mail/imap/package-summary.html
@@ -15,7 +15,7 @@ spring:
     properties:
       mail:
         smtp:
-          from: liaolong_test@163.com # 默认发件人
+          from: xxx@xxx.com # 默认发件人
           auth: true # 开启权限认证
           timeout: 60000 # 邮件接收超时时间
           connectiontimeout: 60000 # 连接超时时间
